--- a/package.json
+++ b/package.json
@@ -1,41 +1,55 @@
 {
-	"name": "StoreLandTemplateNodeJSEditor",
-	"version": "1.0.0",
-	"description": "",
-	"main": "main.js",
-	"scripts": {
-		"start": "gulp",
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"author": "",
-	"license": "ISC",
-	"dependencies": {
-		"chalk": "^4.0.0",
-		"gulp-plumber": "^1.2.1",
-		"gulp-wait": "0.0.2",
-		"moment": "^2.25.3",
-		"node-fetch": "2.6.11",
-		"node-notifier": "^8.0.1",
-		"nodejs-base64": "^1.0.3"
-	},
-	"devDependencies": {
-		"bootstrap": "^4.4.1",
-		"browser-sync": "^2.26.7",
-		"del": "^5.1.0",
-		"gulp": "^4.0.2",
-		"gulp-autoprefixer": "^7.0.1",
-		"gulp-clean-css": "^4.3.0",
-		"gulp-concat": "^2.6.1",
-		"gulp-imagemin": "^7.1.0",
-		"gulp-less": "^4.0.1",
-		"gulp-newer": "^1.4.0",
-		"gulp-rsync": "0.0.8",
-		"gulp-stylus": "^2.7.0",
-		"gulp-uglify-es": "^2.0.0",
-		"prettier": "3.2.5"
-	},
-	"engines": {
-		"node": "^12.0.0",
-		"npm": ">=6"
-	}
+  "name": "storeland-template-editor",
+  "version": "2.0.0",
+  "description": "Template dev environment",
+  "main": "gulpfile.js",
+  "type": "module",
+  "scripts": {
+    "start": "cross-env NODE_ENV=development gulp",
+    "build": "cross-env NODE_ENV=production gulp build",
+    "dev:watch": "nodemon",
+    "download:code": "cross-env NODE_ENV=development gulp download --code-only",
+    "download:all": "cross-env NODE_ENV=development gulp download --all",
+    "lint": "eslint ./src/js/main.js"
+  },
+  "author": "Dmitry Shcheklein",
+  "license": "ISC",
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.28.4",
+    "@babel/preset-env": "^7.28.3",
+    "@eslint/js": "^9.37.0",
+    "browser-sync": "^3.0.4",
+    "chalk": "^5.6.2",
+    "cross-env": "10.1.0",
+    "dayjs": "^1.11.18",
+    "del": "^8.0.1",
+    "dotenv": "^17.2.3",
+    "eslint": "9.37.0",
+    "eslint-config-htmlacademy": "10.0.1",
+    "glob": "11.0.3",
+    "globals": "^16.4.0",
+    "got": "^14.5.0",
+    "gulp": "^5.0.1",
+    "gulp-autoprefixer": "^10.0.0",
+    "gulp-babel": "^8.0.0",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-file-include": "^2.3.0",
+    "gulp-imagemin": "^9.1.0",
+    "gulp-newer": "^1.4.0",
+    "gulp-plumber": "^1.2.1",
+    "gulp-svg-sprite": "^2.0.3",
+    "joi": "^18.0.1",
+    "minimist": "^1.2.8",
+    "nodemon": "^3.1.10",
+    "prettier": "^3.6.2"
+  },
+  "dependencies": {
+    "air-datepicker": "^3.6.0",
+    "jquery": "^3.7.1",
+    "normalize.css": "^8.0.1"
+  }
 }
